# duojin01

./: .gitignore  README.MD  README_arm.md  global.py
Log/: OrbbecSDK.log.txt
maps/: 0.pgm  0.yaml  default.pgm
scripts/: covariance_ab_real_test.py  dev.sh  enter.sh  set_dev.sh  sim_stop.sh  stop.sh  sync_saved_maps.sh
src/OrbbecSDK/orbbec_camera/: package.xml
src/duojin01_base_driver/: CMakeLists.txt  package.xml
src/duojin01_base_driver/include/duojin01_base_driver/: driver_types.hpp  quaternion_solution.hpp
src/duojin01_base_driver/src/: duojin01_base_driver.cpp  quaternion_solution.cpp
src/duojin01_bringup/: package.xml  setup.cfg  setup.py
src/duojin01_bringup/config/: arm_gcode_bridge.yaml  ekf.yaml  foxglove_bridge.yaml  joy_teleop_estop.yaml  joy_teleop_normal.yaml  joy_teleop_slow.yaml  nav2.yaml  ros_gz_bridge.yaml  slam_toolbox.yaml  twist_mux.yaml  usb_cam.yaml
src/duojin01_bringup/config/foxglove/: map.json
src/duojin01_bringup/config/rviz/: mapping.rviz  navigation.rviz  sim.rviz
src/duojin01_bringup/duojin01_bringup/: __init__.py  arm_gcode_bridge.py  map_paths.py
src/duojin01_bringup/launch/: base.launch.py  bringup_base.launch.py  bringup_mapping.launch.py  bringup_nav.launch.py  bringup_navigation.launch.py  bringup_sim.launch.py  bringup_sim_mapping.launch.py  bringup_sim_navigation.launch.py  bringup_slam.launch.py  bringup_with_arm.launch.py  joy_teleop.launch.py  mapping.launch.py  nav2.launch.py  navigation.launch.py  save_map.launch.py  sim.launch.py  sim_mapping.launch.py  sim_navigation.launch.py  slam.launch.py
src/duojin01_bringup/maps/: default.yaml  my_map.pgm  my_map.yaml
src/duojin01_bringup/worlds/: empty_world.sdf
src/duojin01_camera/: package.xml  setup.cfg  setup.py  struct.md
src/duojin01_camera/duojin01_camera/: calibrate_camera.py  usb_camera_node.py
src/duojin01_controller_emulator/: package.xml  setup.cfg  setup.py
src/duojin01_controller_emulator/duojin01_controller_emulator/: controller_emulator_node.py
src/duojin01_description/: package.xml  setup.cfg  setup.py
src/duojin01_description/meshes/: base_collision.stl  base_visual.stl  depth_camera.stl  surface_visual.stl
src/duojin01_description/urdf/: duojin01.xacro  duojin01_shared.xacro  duojin01_sim.xacro
src/duojin01_description/urdf/sensors/: camera.xacro  lidar.xacro
src/duojin01_mission/: package.xml  setup.cfg  setup.py  struct.md
src/duojin01_mission/duojin01_mission/: april_tag_detector.py  mission_executor_node.py
src/duojin01_mission/scripts/: demo.py  grab_calibration_demo.py  nav_demo.py  pick_and_place_demo.py  pick_demo.py  place_demo.py  serial_tool.py
src/duojin01_msgs/: CMakeLists.txt  package.xml
src/duojin01_msgs/msg/: TargetInfo.msg  TargetInfoArray.msg
src/duojin01_safety_watchdog/: package.xml  setup.cfg  setup.py
src/duojin01_safety_watchdog/config/: safety_watchdog.yaml
src/duojin01_safety_watchdog/duojin01_safety_watchdog/: safety_watchdog_node.py
src/duojin01_sim_tools/: package.xml  setup.cfg  setup.py
src/duojin01_sim_tools/duojin01_sim_tools/: clock_guard_node.py  initial_pose_publisher.py  joint_state_stamp_fix_node.py  odom_to_tf_node.py  orbbec_topic_compat_node.py  scan_frame_rewriter.py
src/duojin01_sim_tools/resource/: duojin01_sim_tools
src/duojin01_slam_tools/: CMakeLists.txt  package.xml
src/duojin01_slam_tools/src/: save_map_client_node.cpp
src/duojin01_teleop/: package.xml  setup.cfg  setup.py
src/duojin01_teleop/config/: joy_axis_selector.yaml  joy_launcher.yaml  keyboard_teleop.yaml
src/duojin01_teleop/duojin01_teleop/: joy_axis_selector_node.py  joy_launcher_node.py  keyboard_teleop_core.py  keyboard_teleop_defaults.py  keyboard_teleop_node.py
src/duojin01_teleop/test/: test_copyright.py  test_flake8.py  test_keyboard_teleop_core.py  test_pep257.py
src/lslidar_driver/: README.md
src/lslidar_driver/lslidar_driver/: CMakeLists.txt  package.xml
src/lslidar_driver/lslidar_driver/include/lslidar_driver/: lslidar_driver.h
src/lslidar_driver/lslidar_driver/launch/: lslidar_launch.py
src/lslidar_driver/lslidar_driver/params/: lsx10.yaml  lsx10_1.yaml  lsx10_2.yaml
src/lslidar_driver/lslidar_driver/src/: lslidar_driver.cc
src/mirobot_description/: CMakeLists.txt  package.xml
src/mirobot_description/config/: 99-mirobot-usb.rules
src/mirobot_description/launch/: mirobot_description.launch.py  mirobot_rviz_control.launch.py
src/mirobot_description/scripts/: ensure_serial_permissions.py  normal_exit_button.py  setup_udev_rules.sh
src/mirobot_description/src/: mirobot_gcode_writer.cpp  mirobot_gcode_writer_isaac.cpp
