<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duojin01_description</name>
  <version>0.0.0</version>
  <description>duojin01 robot description</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
