<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lslidar_driver</name>
  <version>1.2.0</version>
  <description>ROS2 device driver for Leishen lidar.</description>
  <maintainer email="shaohuashu@lslidar.com">Nick Shu</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>diagnostic_updater</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>lslidar_msgs</depend>
  <depend>libpcap</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
